# cinder_stft

./: .gitignore  .gitmodules  CMakeLists.txt  CommittTest_ENB.txt  README.md
include/: Resources.h  app.h  app_camera.h  app_config.h  app_event.h  app_globals.h  audio_draw.h  audio_nodes.h  audio_recorder.h  color_pallete.h  grid_renderer.h  monitor_renderer.h  palette_manager.h  recorder_node.h  resampler_node.h  scoped_fbo.h  smart_surface.h  stft_client.h  stft_client_storage.h  stft_filter.h  stft_renderer.h  stft_request.h  stft_surface.h  thread_renderer.h  work_client.h  work_manager.h  work_request.h
src/: Resources.rc  app.cpp  app_camera.cpp  app_config.cpp  app_event.cpp  app_globals.cpp  audio_draw.cpp  audio_nodes.cpp  audio_recorder.cpp  color_pallete.cpp  grid_renderer.cpp  monitor_renderer.cpp  palette_manager.cpp  recorder_node.cpp  resampler_node.cpp  scoped_fbo.cpp  smart_surface.cpp  stft_client.cpp  stft_client_storage.cpp  stft_filter.cpp  stft_renderer.cpp  stft_surface.cpp  thread_renderer.cpp  work_manager.cpp
src/palette_generator/: README.md  generate.js
